# new-platformer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/levels/: TestLevel.json
assets/old_assets/: Settings.json
include/: Animated.h  Camera.h  Constants.h  GameManager.h  GameObject.h  Platform.h  Player.h  Renderable.h  Scene.h  ServiceLocator.h  Settings.h  SingleTexture.h  UIObject.h  Vector.h
include/core/: GameObject.h  Hitbox.h
include/graphics/: Animated.h  Renderable.h  SingleTexture.h  TextureUtils.h
include/math/: Vector.h
include/ui/: UIObject.h
src/: Animated.cpp  CMakeLists.txt  Camera.cpp  GameManager.cpp  GameObject.cpp  Platform.cpp  Renderable.cpp  Scene.cpp  Vector.cpp
src/core/: GameObject.cpp  Hitbox.cpp
src/graphics/: Animated.cpp  Renderable.cpp  SingleTexture.cpp  TextureUtils.cpp
src/math/: Vector.cpp
